generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "windows", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model RefreshToken {
  id        String   @id @default(uuid())
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())
  isValid   Boolean  @default(true)
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("refresh_token")
}

model Rating {
  id        String   @id @default(uuid()) @map("rating_id")
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    String   @map("user_id")
  igdbId    Int      @map("igdb_id")
  value     Float    @map("value")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([userId, igdbId])
  @@index([igdbId])
  @@map("ratings")
}

model User {
  id             String         @id @default(uuid())
  email          String         @unique
  userName       String?        @map("user_name")
  password       String
  profilePicture String?        @map("profile_picture")
  userBanner     String?        @map("user_banner")
  googleId       String?        @unique @map("google_id")
  discordId      String?        @unique @map("discord_id")
  steamId        String?        @unique @map("steam_id")
  createdAt      DateTime       @default(now()) @map("created_at")
  updatedAt      DateTime       @default(now()) @map("updated_at")
  userGames      UserGame[]
  refreshToken   RefreshToken[]
  Rating         Rating[]
  Review         Review[]

  following Follow[] @relation("FollowFollower")
  followers Follow[] @relation("FollowFollowing")

  @@map("users")
}

model Follow {
  id          String   @id @default(uuid())
  follower    User     @relation("FollowFollower", fields: [followerId], references: [id], onDelete: Cascade)
  followerId  String   @map("follower_id")
  following   User     @relation("FollowFollowing", fields: [followingId], references: [id], onDelete: Cascade)
  followingId String   @map("following_id")
  createdAt   DateTime @default(now()) @map("created_at")

  @@unique([followerId, followingId])
  @@index([followingId])
  @@map("follows")
}

model UserGame {
  id                String   @id @default(uuid())
  igdbId            Int      @map("igdb_id")
  userId            String   @map("user_id")
  userGamesStatusId Int      @map("user_games_status_id")
  createdAt         DateTime  @default(now()) @map("created_at")
  updatedAt         DateTime  @updatedAt @map("updated_at")
  completedAt       DateTime? @map("completed_at")
  user              User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  UserGameStats   UserGameStats?
  UserGamesStatus UserGamesStatus @relation(fields: [userGamesStatusId], references: [id])

  @@unique([userId, igdbId])
  @@map("user_games")
}

model UserGamesStatus {
  id        Int        @id @default(autoincrement())
  status    Status
  userGames UserGame[]

  @@map("users_games_status")
}

enum Status {
  PLAYED
  PAUSED
  PLAYING
  BACKLOG
  WISHLIST
}

model GameCache {
  igdbId      Int      @id @map("igdb_id")
  name        String
  coverUrl    String?  @map("cover_url")
  summary     String?
  genres      String[]
  platforms   String[]
  releaseDate      Int?     @map("release_date")
  hypes            Int?     @map("hypes")
  totalRatingCount Int?     @map("total_rating_count")
  category         Int?     @map("category")
  parentGameId     Int?     @map("parent_game_id")
  syncedAt         DateTime @default(now()) @updatedAt @map("synced_at")

  @@index([name])
  @@index([releaseDate])
  @@index([hypes])
  @@index([totalRatingCount])
  @@map("games_cache")
}

model Review {
  id        String   @id @default(uuid())
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  userId    String   @map("user_id")
  igdbId    Int      @map("igdb_id")
  text      String
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@unique([userId, igdbId])
  @@index([igdbId])
  @@map("reviews")
}

model UserGameStats {
  id          String   @id @default(uuid())
  userGameId  String   @map("user_game_id")
  completions Int      @default(0)
  hoursPlayed Decimal? @map("hours_played") @db.Decimal(6, 2)

  userGame UserGame @relation(fields: [userGameId], references: [id], onDelete: Cascade)

  @@unique([userGameId])
  @@map("user_game_stats")
}
