//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table refresh_token {
  id String [pk]
  token String [unique, not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  isValid Boolean [not null, default: true]
  userId String [not null]
  user users [not null]
}

Table ratings {
  id String [pk]
  user users [not null]
  userId String [not null]
  igdbId Int [not null]
  value Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, igdbId) [unique]
  }
}

Table users {
  id String [pk]
  email String [unique, not null]
  userName String
  password String [not null]
  profilePicture String
  userBanner String
  googleId String [unique]
  discordId String [unique]
  steamId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  userGames user_games [not null]
  refreshToken refresh_token [not null]
  Rating ratings [not null]
  Review reviews [not null]
  following follows [not null]
  followers follows [not null]
}

Table follows {
  id String [pk]
  follower users [not null]
  followerId String [not null]
  following users [not null]
  followingId String [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (followerId, followingId) [unique]
  }
}

Table user_games {
  id String [pk]
  igdbId Int [not null]
  userId String [not null]
  userGamesStatusId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  completedAt DateTime
  user users [not null]
  UserGameStats user_game_stats
  UserGamesStatus users_games_status [not null]

  indexes {
    (userId, igdbId) [unique]
  }
}

Table users_games_status {
  id Int [pk, increment]
  status Status [not null]
  userGames user_games [not null]
}

Table games_cache {
  igdbId Int [pk]
  name String [not null]
  coverUrl String
  summary String
  genres String[] [not null]
  platforms String[] [not null]
  releaseDate Int
  hypes Int
  totalRatingCount Int
  category Int
  parentGameId Int
  syncedAt DateTime [default: `now()`, not null]
}

Table reviews {
  id String [pk]
  user users [not null]
  userId String [not null]
  igdbId Int [not null]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, igdbId) [unique]
  }
}

Table user_game_stats {
  id String [pk]
  userGameId String [unique, not null]
  completions Int [not null, default: 0]
  hoursPlayed Decimal
  userGame user_games [not null]
}

Enum Status {
  PLAYED
  PAUSED
  PLAYING
  BACKLOG
  WISHLIST
}

Ref: refresh_token.userId > users.id [delete: Cascade]

Ref: ratings.userId > users.id [delete: Cascade]

Ref: follows.followerId > users.id [delete: Cascade]

Ref: follows.followingId > users.id [delete: Cascade]

Ref: user_games.userId > users.id [delete: Cascade]

Ref: user_games.userGamesStatusId > users_games_status.id

Ref: reviews.userId > users.id [delete: Cascade]

Ref: user_game_stats.userGameId - user_games.id [delete: Cascade]